pl 16
	- bf: doco about {Mus*,Opus}TeX
	- ; optional after \musicidentifier
	- bf: configure: MFDIR
	- bf: String::operator bool () removed
	- bf: String::operator char const * () removed
	- bf: Line_spacer::~Line_spacer () added: plugged memleak
	- bf: Line_of_score::do_unlink () call Spanner::do_unlink
	- bf: rests in beams
	- bfs: mudela-man
	- bf: textnatural
	- bf: 20 pt flags
	- bf: longarest 
	

pl 15.jcn1
	- bf: typos whole and half notehead
	- de-uglyfied bolletjes.mf
	- ascii output of font metrics in mf logfile

******
sep 17

	
pl 15
	- put top of NEWS file in the webpage
	- breadth first search for engravers.
	- bf: coriolan-alto.ly
	- Stem / Notehead width now properly calced
	- Atom and Symbol merged

pl 14.jcn1
	- lily's own noteheads (balls/globes :)  (font-en-tja*.mf)
	- {table,paper}* and taupindefs adaptations (when are we moving?)
	- fp, sf, sfz dynamics
	- font.ly
	- bf: dist mudela-mode

*******
sep 15

pl 14
	- Simple but nifty mudela-mode.el for Emacs
	- slightly better syntax for single-note-repeat, now default kept in
Stem_engraver
	- bf: Abbrev_beams are not the only beams (see: jcn4, stem-info, thanks, Jan)
	- a CPU timer for Interpreting and Breaking
	- Separate Score_elem:
	  * invoke-once stuff in Super_elem (using function pointers; much cleaner now)
	  * geometrical stuff into Graphical_element
	  * Axis_group_* accept Graphical_elements iso. Score_elems
	  * A dimension cache, hopefully this makes lily a bit faster
	  * TeX output moved out of Score_elem, separate interface Outputter
	
	- < \multi 2; bla >  -> \multi 2 < bla > (mudela 0.1.6)
	- bf: don't do \multi if \type specified
	- Translator switching: Change_translator, Change_iterator
	

pl 12.jcn4
	- fixed dynamic f, magstep bug
	- gaps on abbrev-beams 
	- bf: stem-info
	- bf: last abbrev
	- bf: stem: do_width
	- bf: removed rest-column.hh

*******
sep 11

pl 13
	- big Rest/notehead rewrite:
	  * separated Rest, Note_head and Dots