@@ -1,0 +1,4 @@
+% generated at Mon Sep 22 21:28:05 1997 from out/dyn10.log
+% changes will be lost
+% dyn=\symboltables {
+	%  } % dyn
