@@ -1,0 +1,11 @@
+% generated at Mon Sep 22 22:26:51 1997 from out/font-en-tja16.log
+% changes will be lost
+% font-en-tja=\symboltables {
+	"balls" = \table {
+		"0"	"\wholeball"	0.00\pt	8.64\pt	4.80\pt	0.00\pt
+		"1"	"\halfball"	0.00\pt	5.97\pt	4.80\pt	0.00\pt
+		"2"	"\quartball"	0.00\pt	5.88\pt	4.80\pt	0.00\pt
+		"-1"	"\breveball"	0.00\pt	9.60\pt	4.80\pt	0.00\pt
+		"-2"	"\longaball"	0.00\pt	9.60\pt	4.80\pt	0.00\pt
+		}
+	%  } % font-en-tja
