@@ -1,0 +1,11 @@
+% generated at Mon Sep 22 22:28:11 1997 from out/font-en-tja20.log
+% changes will be lost
+% font-en-tja=\symboltables {
+	"balls" = \table {
+		"0"	"\wholeball"	0.00\pt	10.44\pt	5.80\pt	0.00\pt
+		"1"	"\halfball"	0.00\pt	7.21\pt	5.80\pt	0.00\pt
+		"2"	"\quartball"	0.00\pt	7.10\pt	5.80\pt	0.00\pt
+		"-1"	"\breveball"	0.00\pt	11.60\pt	5.80\pt	0.00\pt
+		"-2"	"\longaball"	0.00\pt	11.60\pt	5.80\pt	0.00\pt
+		}
+	%  } % font-en-tja
