@@ -16,8 +16,8 @@ paper_sixteen = \paper {
 	rule_thickness = 0.4\pt;
 	bar_size = 16.0 \pt;
 	interline = 4.\pt;
-	notewidth = 5.45\pt; % ugh, see table16 for sizes
-	wholewidth = 8.0\pt;
+	notewidth = 5.93\pt; % ugh, see table16 for sizes
+	wholewidth = 8.64\pt;
 	unitspace = 22.\pt;
 	%geometric = 1.414;
 	basicspace = 4.\pt;
