@@ -7,8 +7,8 @@ paper_twenty = \paper {
 	rule_thickness = 0.4\pt;
 	bar_size = 20.0 \pt;
 	interline = 5.\pt;
-	notewidth = 6.7\pt; % ugh see table20 for sizes
-	wholewidth = 10.0\pt;
+	notewidth = 7.15\pt; % ugh see table20 for sizes
+	wholewidth = 10.44\pt;
 	unitspace = 22.\pt;
 %	basicspace = 4.\pt;
 %	geometric = 1.414;
