@@ -1,0 +1,7 @@
+% generated at Mon Sep 22 22:23:19 1997 from out/r20.log
+% changes will be lost
+% font-en-tja=\symboltables {
+	"rests" = \table {
+		"-2"	"\eighthrest"	0.00\pt	5.40\pt	17.55\pt	0.00\pt
+		}
+	%  } % font-en-tja
