@@ -150,7 +150,7 @@ Lookup::flag (int j, Direction d) const
 }
 
 Atom
-Lookup::streepjes (int i) const
+Lookup::streepjes (int type, int i) const
 {
   assert (i);
   
@@ -167,9 +167,16 @@ Lookup::streepjes (int i) const
       arg = i;
       idx = "toplines";
     }
+
+  // ugh
+  Real w = paper_l_->note_width ();
+  if (type <= 0)
+    w *= 1.46;
+
   Atom ret = (*symtables_)("streepjes")->lookup (idx);
   
   Array<String> a;
+  a.push (String (w) + "pt");
   a.push (arg);
   ret.tex_ = substitute_args (ret.tex_, a);
 
