@@ -34,5 +34,7 @@
 \hbox{\dynfp}
 \hbox{\dynsf}
 \hbox{\dynsfz}
+\hbox{\dynfz}
+\hbox{\dynrf}
 
 \bye
