@@ -1,8 +1,13 @@
 % font-en-tja16.mf
 % part of LilyPond's pretty-but-neat music font
 
-mode_setup;
+% font_identifier:="font-en-tja16";
+% font_size 16pt#;
 
+input autometric;
+fet_beginfont("font-en-tja", 16);
+
+mode_setup;
 
 test:=0;
 
@@ -11,11 +16,9 @@ stafflines:=5;
 stafflinethickness#:=0.4pt#;
 code:=-1;
 
-input autometric;
-% fet_beginfont;
-fet_beginfont("font-en-tja", 16);
-
 input bolletjes;
+
+fet_endfont("font-en-tja");
 
 end.
 
