@@ -3,6 +3,9 @@
 
 mode_setup;
 
+input autometric;
+fet_beginfont("font-en-tja", 20);
+
 test:=0;
 
 staffsize#:=20pt#;
@@ -11,10 +14,9 @@ stafflines:=5;
 stafflinethickness#:=0.4pt#;
 code:=-1;
 
-input autometric;
-fet_beginfont("font-en-tja", 20);
-
 input bolletjes;
+
+fet_endfont("font-en-tja");
 
 end.
 
