@@ -7,8 +7,9 @@
 \def\dynnf{\dynfont\char1}
 \def\dynp{\dynfont\char2}
 \def\dynm{\dynfont\char3}
-\def\dyns{\dynfont\char4}
-\def\dynz{\dynfont\char5}
+\def\dynr{\dynfont\char4}
+\def\dyns{\dynfont\char5}
+\def\dynz{\dynfont\char6}
 
 \def\kdynf{\dynnf}
 \def\kdynp{\dynp\kern-.1ex}
@@ -24,4 +25,6 @@
 \def\dynfp{{\kdynf\dynp}}
 \def\dynsf{{\dyns\kern-.3ex\dynnf}}
 \def\dynsfz{{\dynsf\dynz}}
+\def\dynfz{{\dynf\dynz}}
+\def\dynrf{{\dynr\dynf}}
 
