@@ -45,11 +45,13 @@
 % \musicdef\quartball{'007}
 % \musicdef\halfball{'010}
 % \musicdef\wholeball{'011}
+\musicdef\breveball{'040}
+\musicdef\longaball{'047}
 \fetdef\quartball{'002}
 \fetdef\halfball{'001}
 \fetdef\wholeball{'000}
-\musicdef\breveball{'040}
-\musicdef\longaball{'047}
+% \fetdef\breveball{'003}
+% \fetdef\longaball{'004}
 \musicdef\halfrest{'074}
 \musicdef\wholerest{'075}
 \musicdef\breverest{'072}
