@@ -1,3 +1,12 @@
+pl 16.jcn2
+	- mf-to-table.in: generate mozarella metric info tables
+	- autometric.mf: write metric info to mf logfile
+	- ital-r.mf, smaller ital-m.mf
+	- variable streepjes length (top/bottomlines); fixed (for 20pt?)
+	- streepjes twice as thick as staffrules
+	- even more pronounced bolletjes -- how 'bout this wendy?
+	- quarter and half note after drawings (a/b less distinct)
+
 pl 16
 	- bf: doco about {Mus*,Opus}TeX
 	- ; optional after \musicidentifier
@@ -12,7 +21,6 @@ pl 16
 	- bf: 20 pt flags
 	- bf: longarest 
 	
-
 pl 15.jcn1
 	- bf: typos whole and half notehead
 	- de-uglyfied bolletjes.mf
